# singh3

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  init.sql  singh3.nomad
.github/workflows/: main.yml
ci/: pipeline.yml
src/: main.rs
src/commands/: count.rs  general.rs  macros.rs  minigames.rs  mod.rs  tags.rs
src/handler/: count.rs  interactions.rs  mod.rs
src/lib/: components.rs  messages.rs
